add -> Documentación Swagger NotificationsController
